üpgrade index.html

--- a/functional/index.html
+++ b/functional/index.html
@@ -16,7 +16,7 @@
 		<dl class="list">
 			<dt>1. Создание сайта на основе готового дизайна</dt>
 				<dd>
-					Сроки на разработку дизайна - __.__.__ до __.__.__
+					Сроки на разработку дизайна и подготовление макета для верстки - __.__.__ до __.__.__
 				</dd>
 			<dt>2. Доработка шаблона под нужды студентов КПИ</dt>
 					<dd>
@@ -32,15 +32,20 @@
 				</dd>
 			<dt>5. Разработка меню сайта ( боковое меню )</dt>
 				<dd>
-					Разработка выдвижного меню <i>	в правой части экрана ( Под вопросом )</i> 
+					Разработка выдвижного меню <i>	в правой части экрана ( Под вопросом )</i> <br>
+					Какие конкретно пункты будут в меню пока неизвестно ( Нужно обсудить с командой )
 				</dd>
 			<dt>6. Разработка формы обратной связи</dt>
 				<dd>
-					Отдельный модуль для связи с администрацией сайта. Связь будет проводится по отдельному email созданому конкретно для нужд сайта 
+					Отдельный модуль для связи с администрацией сайта. Связь будет проводится по отдельному email созданому конкретно для нужд сайта.
+				</dd>
+			<dt>6.1 Разработка формы связи с преподавателем</dt>
+				<dd>
+					Модуль на странице сайта предназначеный специально для <b>быстрой</b> связи студентов с преподавателем.
 				</dd>
 			<dt>7. Модуль с расписанием для конкретной группы</dt>	
 				<dd> 
-					Нужно обсудить вместе с группой 
+					В планах создать модуль с красивой стилизацией который будет в себе хранить информацию подобной той что на <a href="http://rozklad.kpi.ua/Schedules/ViewSchedule.aspx?g=a68dda9c-e188-44a8-841d-a4edaf2efae2">rozklad.kpi.ua</a>. 
 				</dd>
 			<dt>8. Модуль "Новости", последние и популярные статьи.|| Под вопросом</dt>
 				<dd>
